Incorrect login warning now dissappears when retyping, z-index fixed on admin navigation

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -12,9 +12,9 @@
     cursor: pointer;
 }
 
-.teal {
-    z-index: 10;
-}
+.teal { z-index: 10; }
+
+.navmin { z-index: 11; }
 
 img.logo {
     max-height: 90px;
